<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_controller</name>
  <version>0.0.0</version>
  <description>The turtlebot3_controller package</description>  
  <maintainer email="kent@todo.todo">kent</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot_gazebo</depend>
</package>
